examples/pos/issue1410.effekt
def main() = {
  var r = 0

  r += 3
  r *= (r + r)
  r /= 2
  r -= -1

  println(r)
}