examples/neg/must_box_region.effekt
module must_box_region

def foo() = region r {
  r
}